@@ -2,6 +2,9 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+  * Make 'got fork' add the forked repo as remote 'upstream' unless
+    -N/--noremoteadd option is given. (John Anderson)
+
 1.29      2015-03-26 11:58:24-07:00 America/Los_Angeles (TRIAL RELEASE)
 
   * Docs for 'clone' and 'fork'. (John Anderson)
